--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: hmivar-webservice
     runtime: node
     rootDir: webservice
-    buildCommand: npm --prefix webservice install
-    startCommand: node webservice/src/index.js
+    buildCommand: npm install
+    startCommand: npm start
     envVars:
       - key: NODE_VERSION
         value: 18
+      - key: DATABASE_URL
+        sync: false
